Added Education, Work details. Project details yet to be added.

--- a/resume.tex
+++ b/resume.tex
@@ -1,11 +1,29 @@
-\documentclass{simpleresume}
+\documentclass[a4paper]{simpleresume}
+\usepackage[margin=1in]{geometry}
 \begin{document}
 
-\section{Education}
-\datedsubsection{Some University}{2011--2014}
+\name{Sameer Kumar Mishra}
+\contact{7204128890}{sameermishravats@gmail.com}{Bangalore}
+
 \section{Work}
-\datedsubsection{Some company}{2018--Present}
+\datedsubsection{Amazon Inc.}{2018--Present}
+SDE-II, External Fulfilment Platform.
+\datedsubsection{Samsung Electronics}{2014--2018}
+Software Engineer, Modem Group.
+
+\section{Education}
+\datedsubsection{National Institute of Technology, Surathkal}{2011--2014}
+Masters in Computer Application, 8.45 CGPA.
+\datedsubsection{St. Xavier's College, Ranchi}{2008-2011}
+B.Sc. Computer Applications, 8.64 CGPA.
+
 \section{Projects}
-\subsection{Some Project}
+\datedsubsection{Push Notification for Shipment Lifecycle}{Amazon}
+\begin{itemize}
+\item Sending push notification through Amazon SNS whenever a shipment changes state.
+\end{itemize}
+\datedsubsection{DB Migration Of A Core Project}{Amazon}
+\datedsubsection{Parser For Modem Log Query Language}{Samsung}
+
 
 \end{document}
