--- a/resume.tex
+++ b/resume.tex
@@ -1,52 +1,35 @@
-\documentclass[a4paper,10pt]{simpleresume}
-\usepackage[margin=1in]{geometry}
+\documentclass[a4paper,11pt]{simpleresume}
 \begin{document}
 
 \name{Sameer Kumar Mishra}
 \contact{7204128890}{sameermishravats@gmail.com}{Bangalore}
 
 \section{Work}
-\datedsubsection{Amazon Inc.}{2018--Present}
+\datedsubsection{Amazon Inc.}{January 2018--Present}
 SDE-II, External Fulfilment Platform.
-\datedsubsection{Samsung Electronics}{2014--2018}
+\datedsubsection{Samsung Electronics}{July 2014--December 2018}
 Software Engineer, Modem Group.
 
 \section{Education}
-\datedsubsection{National Institute of Technology, Surathkal}{2011--2014}
+\datedsubsection{National Institute of Technology, Surathkal}{July 2011--June 2014}
 Masters in Computer Application, 8.45 CGPA.
-\datedsubsection{St. Xavier's College, Ranchi}{2008-2011}
+\datedsubsection{St. Xavier's College, Ranchi}{June 2008--May 2011}
 B.Sc. Computer Applications, 8.64 CGPA.
 
 \section{Projects}
 \datedsubsection{Push Notification for Shipment Lifecycle}{Amazon}
 \begin{itemize}
 \item Aspect based system for sending push notification whenever a shipment changes state.
-\item Helps dependent teams to build dashboard over this and isolate problems with shipments.
+\item Dependent teams build dashboards over this notification stream.
+\item This helps dependent teams isolate shipments related problems. 
 \item Technology used: Amazon SNS, Java, AspectJ.
 \end{itemize}
 \datedsubsection{Interpreter For Modem Log Query Language}{Samsung}
 \begin{itemize}
     \item Developed a Domain Specific Language (DSL) and its interpreter to query modem logs.
-    \item 100s of scripts written in this DSL which save hours of log analysis time of test engineers.
+    \item 100s of scripts written in this DSL which save hours of log analysis time per day of test engineers.
     \item Technology used: C++, Boost::Spirit library.
     \end{itemize}
-\datedsubsection{DB Migration Of A Core Application}{Amazon}
-\begin{itemize}
-    \item Migrated a core application of the team from one relational DB to another.
-    \item Made the application DB independent by removingall DB specific code snippets.
-    \item Migrated all the DB triggers used by the application.
-\end{itemize}
-\datedsubsection{New Column In All DB Tables}{Amazon}
-\begin{itemize}
-    \item Made code changes to populate the new column.
-    \item Performed DB backfill to add values in the new column.
-\end{itemize}
-\datedsubsection{Test Script Generator}{Samsung}
-\begin{itemize}
-    \item Developed a tool to generate test scripts to mimic scenario from modem logs.
-    \item Saved around an hour of effort per testscripts.
-    \item Technology used: Python 3.
-\end{itemize}
 \datedsubsection{Handwritten Digit Recognization}{Hobby Project}
 \begin{itemize}
     \item Implemented Neural Network using Stochastic Gradient Descent.
@@ -61,6 +44,23 @@ B.Sc. Computer Applications, 8.64 CGPA.
     \item Achieved 90\% accuracy on cross-validation set.
     \item Github: https://github.com/sameerkrmishra/ml- notebooks/blob/master/dogs-and-cats.ipynb
     \item Technology used: Python, Keras, NumPy.
+\end{itemize}
+\datedsubsection{DB Migration Of A Core Application}{Amazon}
+\begin{itemize}
+    \item Migrated a core application of the team from one relational DB to another.
+    \item Made application code generic in terms of which underlying relational DB is used.
+    \item Migrated all the business related DB triggers from the old DB to the new DB.
+\end{itemize}
+\datedsubsection{New Column In All DB Tables}{Amazon}
+\begin{itemize}
+    \item Made code changes to populate the new column.
+    \item Performed DB backfill to add values in the new column.
+\end{itemize}
+\datedsubsection{Test Script Generator}{Samsung}
+\begin{itemize}
+    \item Developed a tool to generate test scripts to mimic scenario from modem logs.
+    \item Saved around an hour of effort per testscripts.
+    \item Technology used: Python 3.
 \end{itemize}
 
 \end{document}
