Updated impact of SQuery interpreter.

--- a/resume.tex
+++ b/resume.tex
@@ -27,7 +27,8 @@ B.Sc. Computer Applications, 8.64 CGPA.
 \datedsubsection{Interpreter For Modem Log Query Language}{Samsung}
 \begin{itemize}
     \item Developed a Domain Specific Language (DSL) and its interpreter to query modem logs.
-    \item 100s of scripts written in this DSL which save hours of log analysis time per day of test engineers.
+    \item 2000+ scripts written in this DSL which save hours of log analysis time per day of test engineers.
+    \item Used by 100+ engineers in Samsung Bangalore and Samsung HQ.
     \item Technology used: C++, Boost::Spirit library.
     \end{itemize}
 \datedsubsection{Handwritten Digit Recognization}{Hobby Project}
